--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "@types/react-native-snap-carousel": "^3.8.12",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -37,6 +38,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "yup": "^1.7.0"
